Finish First Trial Testing of indicatorModule

--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "id": "0c2d9dcf-b7fd-4c8a-b007-6d6692189b2e",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,12 @@
    "id": "92d16eed-8ad4-41cb-87ac-56b0c627e301",
    "metadata": {},
    "source": [
-    "## Load Documents Data"
+    "## Load Raw Documents Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "78d78821-139c-4c9f-bc8e-c00d656359a7",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "e07c63cf-0815-47cc-ba92-0f350971617d",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "221e10b7-28d0-47cb-b13c-b7442a809c08",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "619262ea-724b-44de-8bd3-d8d36b2e8460",
    "metadata": {},
    "outputs": [],
@@ -143,25 +143,6 @@
     "                )\n",
     "    response = response_entities.choices[0].message.content\n",
     "    return response"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2064d46-3400-489b-8da5-8b1f31e89dfc",
-   "metadata": {},
-   "source": [
-    "## Test Query Examples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ddad0d7c-3a88-4f56-b73e-ad5bedad19f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_query = \"How many people in africa lack access to energy/electricity/clean cooking solutions?\"\n",
-    "test_query2 = 'What is the Human Development Index (HDI) value for albania as mentioned in the document?'"
    ]
   },
   {
@@ -182,19 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "fd36673f-d6ef-47b7-82af-f89762719967",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'REU', 'ESH', 'ZWE', 'MAR', 'TCD', 'GHA', 'BWA', 'SDN', 'NER', 'COM', 'STP', 'GNQ', 'LBY', 'RWA', 'NAM', 'TZA', 'ZMB', 'TUN', 'UGA', 'GMB', 'GIN', 'CMR', 'CPV', 'MOZ', 'DJI', 'BFA', 'SYC', 'MUS', 'SEN', 'ZAF', 'COD', 'BDI', 'KEN', 'LSO', 'ETH', 'COG', 'SOM', 'ERI', 'GNB', 'GAB', 'MYT', 'NGA', 'AGO', 'CIV', 'SSD', 'SWZ', 'MLI', 'MRT', 'TGO', 'LBR', 'MWI', 'MDG', 'CAF', 'BEN', 'DZA', 'SHN', 'EGY', 'SLE'}\n",
-      "{'ALB'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Previous 'find_mentioned_countries' cannot catch continent -> Modify a bit\n",
@@ -213,16 +185,17 @@
     "    all_countries = set([country.lower() for country in world_info.get_countries_list()])\n",
     "    \n",
     "    for word in text.split():\n",
+    "        word = word.lower()\n",
     "        # check if this continent\n",
     "        if word in all_countries:\n",
     "            countries.add(world_info.get_country_data(word)['ISO3'])\n",
-    "        elif word.lower() in all_continents:\n",
+    "        elif word in all_continents:\n",
     "            target_countries = world_info.get_countries_list_of(word)\n",
     "            for country in target_countries:\n",
     "                countries.add(world_info.get_country_data(country)['ISO3'])\n",
     "    return countries\n",
-    "print(find_mentioned_country_code(test_query))\n",
-    "print(find_mentioned_country_code(test_query2))"
+    "#print(find_mentioned_country_code(test_query))\n",
+    "#print(find_mentioned_country_code(test_query2))"
    ]
   },
   {
@@ -284,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "9e3b703a-57b3-493a-862c-8160d152acd7",
    "metadata": {},
    "outputs": [],
@@ -294,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "3eab9be9-a94b-40cd-8c23-70efbb217489",
    "metadata": {},
    "outputs": [],
@@ -314,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "96a5e173-6a61-4a48-bb68-180e698e1afd",
    "metadata": {},
    "outputs": [],
@@ -339,17 +312,20 @@
     "    threshold = 0.01\n",
     "    filtered_df = df[df['Indicator Name'].isin(similarity_df[similarity_df['Similarity Score'] > threshold]['Indicator Name'])]\n",
     "\n",
-    "    return  filtered_df"
+    "    return  list(filtered_df['Series Code'])\n",
+    "#print(filter_indicators(test_query))\n",
+    "#print(filter_indicators(test_query2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "2f51e73a-597b-41c1-a2e0-76d3fece207b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# search target indicator\n",
+    "# Implement this function later\n",
     "def search_embeddings(user_query):\n",
     "    df_filtered = filter_indicators(user_query) if filter_indicators(user_query) is not None else None\n",
     "    \n",
@@ -371,47 +347,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88a55574-296e-41c0-845f-86d67f13be07",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0be1524b-f814-4aaa-befb-97b878ef2ee6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_answer(user_query, content):\n",
-    "    system_prompt = \"You are a system that answers user questions based on excerpts from word indicator documents provided for context. Only answer if the answer can be found in the provided context. Do not make up the answer; if you cannot find the answer, say so.\"\n",
-    "    messages = [\n",
-    "        {'role': 'system', 'content': system_prompt},\n",
-    "        {'role': 'user', 'content': user_question},\n",
-    "        {'role': 'user', 'content': content},\n",
-    "    ]\n",
-    "    response_entities = openai.chat.completions.create(\n",
-    "                    model=openai_deployment,\n",
-    "                    temperature=0.2,\n",
-    "                    messages=messages\n",
-    "                )\n",
-    "    response = response_entities.choices[0].message.content\n",
-    "    return response"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "54971fae-ddcf-4caf-b0fe-1c3c6240f746",
    "metadata": {},
    "source": [
-    "## Function for searching target period (1960 - 2023) ✅"
+    "# Function for searching target period (1960 - 2023) (Third Condition Done ✅)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "id": "a40d575b-c8ba-4ff5-baba-3002debe466c",
    "metadata": {},
    "outputs": [],
@@ -424,14 +369,14 @@
     "        if \"REF\" not in value:\n",
     "            if isinstance(value, dict):\n",
     "                for year in range(int(value['begin']), int(value['end']) + 1):\n",
-    "                    year_list.add(year)\n",
+    "                    year_list.add(str(year))\n",
     "            elif value.isdigit():\n",
-    "                year_list.add(int(value))\n",
+    "                year_list.add(str(value))\n",
     "            elif sutimeType in ['DATE', 'DURATION']:\n",
     "                if sutimeType == 'DATE':\n",
     "                    res = re.search('^\\d\\d\\d\\d', value)\n",
     "                    if res:\n",
-    "                        year_list.add(int(res.group(0)))\n",
+    "                        year_list.add(str(res.group(0)))\n",
     "                else:\n",
     "                    year_dur = 0\n",
     "                    current_year = datetime.now().year\n",
@@ -439,22 +384,22 @@
     "                    if dur_list:\n",
     "                        year_dur = max([int(y) for y in dur_list])\n",
     "                        while year_dur:\n",
-    "                            year_list.add(current_year - year_dur)\n",
+    "                            year_list.add(str(current_year - year_dur))\n",
     "                            year_dur -= 1\n",
     "            else:\n",
     "                continue\n",
-    "    print(year_list)\n",
-    "    return year_list"
+    "    return list(year_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 16,
    "id": "56c2e1fc-0840-46eb-b515-02ac8c12ac41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_target_period_timex3(user_query):\n",
+    "t = \"How many people in Afghanistan lack access to energy/electricity/clean cooking solutions for past 3 years?\"\n",
+    "def find_target_period(user_query):\n",
     "    sutime = SUTime(mark_time_ranges = True, include_range = True)\n",
     "    res = sutime.parse(user_query)\n",
     "    return timex3_to_year_list(res)"
@@ -470,28 +415,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "4d45b480-44fa-4fd7-b02a-83eda2cedab1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_to_structure(countries, indicators, years):\n",
-    "    "
+    "    # load all indicator dataset\n",
+    "    # wdi_csv = pd.read_csv('../data/WDI_CSV/WDICSV.csv')\n",
+    "    count = 0\n",
+    "    result_dict = {}\n",
+    "    for country in countries:\n",
+    "        for indicator in indicators:\n",
+    "            indicator_id = f\"wdi-{count + 1}\"\n",
+    "            target_row = wdi_csv[(wdi_csv['Country Code'] == country) & (wdi_csv['Indicator Code'] == indicator)]\n",
+    "            if not target_row.empty:\n",
+    "                country_name, indicator_name = target_row['Country Name'].values[0], target_row['Indicator Name'].values[0]\n",
+    "                if years:\n",
+    "                    target_row = target_row[years]\n",
+    "                else:\n",
+    "                    target_row = target_row.iloc[:,4:]\n",
+    "                target_row = target_row.dropna(axis=1)\n",
+    "                if not target_row.empty:\n",
+    "                    year_to_value = {}\n",
+    "                    for column in target_row:\n",
+    "                        year_to_value[column] = target_row[column].values[0]\n",
+    "                    indicator_info = {\n",
+    "                        \"Country\": country_name,\n",
+    "                        \"Indicator Name\": indicator_name,\n",
+    "                        \"Values Per Year\": year_to_value\n",
+    "                    }\n",
+    "                    \n",
+    "                    result_dict[indicator_id] = indicator_info\n",
+    "                    # Increment the counter\n",
+    "                    count += 1\n",
+    "        if count == 30:\n",
+    "            break\n",
+    "    return result_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "e64e007e-c4cf-4876-a39a-361d31556c06",
    "metadata": {},
    "outputs": [],
    "source": [
     "## module to extract text from documents and return the text and document codes\n",
-    "def indicatorsModule(user_query, client, embedding_model):\n",
+    "def indicatorsModule(user_query):\n",
     "    countries = find_mentioned_country_code(user_query)\n",
     "    indicators = filter_indicators(user_query) #df, distances, indices\n",
     "    years = find_target_period(user_query)\n",
-    "    if countries and indicators and years:\n",
+    "    if countries and indicators:\n",
+    "        # Reduce Indicator List to 2 if countries are too many\n",
+    "        if len(countries) > 5:\n",
+    "            indicators = indicators[:2]\n",
     "        result_structure = map_to_structure(countries, indicators, years)\n",
     "        return result_structure\n",
     "    else:\n",
@@ -499,12 +477,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "953cf8b9-2481-4f5f-873b-2a406aac0265",
+   "metadata": {},
+   "source": [
+    "# Test Function (indicatorsModule)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e42ecfa-2a94-48a6-9690-4bd0e282614a",
+   "metadata": {},
+   "source": [
+    "## User Query Examples"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8a638a0d-3eba-4225-8093-eb2dd44c4c82",
+   "execution_count": 24,
+   "id": "1cf7abef-b544-4525-8465-2e567f29a7ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_query1 = \"How many people in Afghanistan lack access to energy/electricity/clean cooking solutions for past 3 years?\"\n",
+    "test_query2 = \"How much is invested in energy in Africa per annum from 2020 to 2023?\"\n",
+    "test_query3 = \"What is the social and economic impact of investing 1 million USD in clean energy in albania?\"\n",
+    "test_query4 = \"What is the socio-economic and environmental impact of the rising demand for critical minerals on indigenous communities in india?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c84ce8c9-26e0-4278-827b-25eba8662170",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query # 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query # 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query # 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query # 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
+      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "for i, test_query in enumerate([test_query1, test_query2, test_query3, test_query4]):\n",
+    "    print(f\"Query # {i}\")\n",
+    "    indicator_data = indicatorsModule(test_query)\n",
+    "    result.append(indicator_data)\n",
+    "with open('../testing/indicatorModule_test_output.json', 'w') as file:\n",
+    "    json.dump(result, file, indent=4)"
+   ]
   }
  ],
  "metadata": {
