Add Test Queries for indicator Module

--- a/notebooks/Indicators.ipynb
+++ b/notebooks/Indicators.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0c2d9dcf-b7fd-4c8a-b007-6d6692189b2e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "78d78821-139c-4c9f-bc8e-c00d656359a7",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e07c63cf-0815-47cc-ba92-0f350971617d",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "221e10b7-28d0-47cb-b13c-b7442a809c08",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "619262ea-724b-44de-8bd3-d8d36b2e8460",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fd36673f-d6ef-47b7-82af-f89762719967",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9e3b703a-57b3-493a-862c-8160d152acd7",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3eab9be9-a94b-40cd-8c23-70efbb217489",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "96a5e173-6a61-4a48-bb68-180e698e1afd",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2f51e73a-597b-41c1-a2e0-76d3fece207b",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a40d575b-c8ba-4ff5-baba-3002debe466c",
    "metadata": {},
    "outputs": [],
@@ -393,12 +393,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "56c2e1fc-0840-46eb-b515-02ac8c12ac41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = \"How many people in Afghanistan lack access to energy/electricity/clean cooking solutions for past 3 years?\"\n",
     "def find_target_period(user_query):\n",
     "    sutime = SUTime(mark_time_ranges = True, include_range = True)\n",
     "    res = sutime.parse(user_query)\n",
@@ -415,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "4d45b480-44fa-4fd7-b02a-83eda2cedab1",
    "metadata": {},
    "outputs": [],
@@ -456,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e64e007e-c4cf-4876-a39a-361d31556c06",
    "metadata": {},
    "outputs": [],
@@ -471,10 +470,10 @@
     "        if len(countries) > 5:\n",
     "            indicators = indicators[:2]\n",
     "        # for testing\n",
-    "        result_structure = {}\n",
-    "        result_structure[\"User Query\"] = user_query\n",
-    "        result_structure[\"indicatorsModule Result\"] = map_to_structure(countries, indicators, years)\n",
-    "        #result_structure = map_to_structure(countries, indicators, years)\n",
+    "        #result_structure = {}\n",
+    "        #result_structure[\"User Query\"] = user_query\n",
+    "        #result_structure[\"indicatorsModule Result\"] = map_to_structure(countries, indicators, years)\n",
+    "        result_structure = map_to_structure(countries, indicators, years)\n",
     "        return result_structure\n",
     "    else:\n",
     "        return {}"
@@ -498,145 +497,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "1cf7abef-b544-4525-8465-2e567f29a7ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_query1 = \"How many people in Afghanistan lack access to energy/electricity/clean cooking solutions for past 3 years?\"\n",
-    "test_query2 = \"How much is invested in energy in Africa per annum from 2020 to 2023?\"\n",
-    "test_query3 = \"What is the social and economic impact of investing 1 million USD in clean energy in albania?\"\n",
-    "test_query4 = \"What is the socio-economic and environmental impact of the rising demand for critical minerals on indigenous communities in india?\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "c84ce8c9-26e0-4278-827b-25eba8662170",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query # 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
-      "[main] INFO edu.stanford.nlp.tagger.maxent.MaxentTagger - Loading POS tagger from edu/stanford/nlp/models/pos-tagger/english-left3words-distsim.tagger ... done [0.5 sec].\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - sutime.includeRange=true\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - Unknown property: |sutime.includeRange|\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - sutime.language=english\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - sutime.markTimeRanges=true\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - Unknown property: |sutime.markTimeRanges|\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - Unknown property: |sutime.includeRange|\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - Unknown property: |sutime.markTimeRanges|\n",
-      "[main] INFO edu.stanford.nlp.ie.AbstractSequenceClassifier - Loading classifier from edu/stanford/nlp/models/ner/english.all.3class.distsim.crf.ser.gz ... done [0.7 sec].\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - Unknown property: |sutime.includeRange|\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - Unknown property: |sutime.markTimeRanges|\n",
-      "[main] INFO edu.stanford.nlp.ie.AbstractSequenceClassifier - Loading classifier from edu/stanford/nlp/models/ner/english.muc.7class.distsim.crf.ser.gz ... done [0.2 sec].\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - Unknown property: |sutime.includeRange|\n",
-      "[main] INFO edu.stanford.nlp.sequences.SeqClassifierFlags - Unknown property: |sutime.markTimeRanges|\n",
-      "[main] INFO edu.stanford.nlp.ie.AbstractSequenceClassifier - Loading classifier from edu/stanford/nlp/models/ner/english.conll.4class.distsim.crf.ser.gz ... done [0.4 sec].\n",
-      "[main] INFO edu.stanford.nlp.time.JollyDayHolidays - Initializing JollyDayHoliday for SUTime from classpath edu/stanford/nlp/models/sutime/jollyday/Holidays_sutime.xml as sutime.binder.1.\n",
-      "[main] INFO edu.stanford.nlp.time.TimeExpressionExtractorImpl - Using following SUTime rules: edu/stanford/nlp/models/sutime/defs.sutime.txt,edu/stanford/nlp/models/sutime/english.sutime.txt,edu/stanford/nlp/models/sutime/english.holidays.sutime.txt\n",
-      "[main] INFO edu.stanford.nlp.pipeline.TokensRegexNERAnnotator - ner.fine.regexner: Read 580705 unique entries out of 581864 from edu/stanford/nlp/models/kbp/english/gazetteers/regexner_caseless.tab, 0 TokensRegex patterns.\n",
-      "[main] INFO edu.stanford.nlp.pipeline.TokensRegexNERAnnotator - ner.fine.regexner: Read 4869 unique entries out of 4869 from edu/stanford/nlp/models/kbp/english/gazetteers/regexner_cased.tab, 0 TokensRegex patterns.\n",
-      "[main] INFO edu.stanford.nlp.pipeline.TokensRegexNERAnnotator - ner.fine.regexner: Read 585574 unique entries from 2 files\n",
-      "[main] INFO edu.stanford.nlp.pipeline.NERCombinerAnnotator - Using numeric classifiers: true\n",
-      "[main] INFO edu.stanford.nlp.pipeline.NERCombinerAnnotator - Using SUTime: true\n",
-      "[main] INFO edu.stanford.nlp.pipeline.NERCombinerAnnotator - Using fine grained: true\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n",
-      "[main] INFO edu.stanford.nlp.time.JollyDayHolidays - Initializing JollyDayHoliday for SUTime from classpath edu/stanford/nlp/models/sutime/jollyday/Holidays_sutime.xml as sutime.binder.1.\n",
-      "[main] INFO edu.stanford.nlp.time.TimeExpressionExtractorImpl - Using following SUTime rules: edu/stanford/nlp/models/sutime/defs.sutime.txt,edu/stanford/nlp/models/sutime/english.sutime.txt,edu/stanford/nlp/models/sutime/english.holidays.sutime.txt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query # 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query # 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query # 3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Registering annotator sutime with class edu.stanford.nlp.time.TimeAnnotator\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator tokenize\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ssplit\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator pos\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator lemma\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator ner\n",
-      "[main] INFO edu.stanford.nlp.pipeline.StanfordCoreNLP - Adding annotator sutime\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = []\n",
-    "for i, test_query in enumerate([test_query1, test_query2, test_query3, test_query4]):\n",
-    "    print(f\"Query # {i}\")\n",
-    "    indicator_data = indicatorsModule(test_query)\n",
-    "    result.append(indicator_data)\n",
-    "with open('../testing/indicatorModule_test_output.json', 'w') as file:\n",
-    "    json.dump(result, file, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "d894f951-b21d-4651-9146-6486dff245a7",
+   "id": "00a85b63-0697-4351-a866-6f358a2c8d7e",
    "metadata": {},
    "outputs": [],
    "source": []
